feat (API integration | Responsiveness | unit test): implement performance Optimisation using SWR - use SWR and fetch for API integration to improve performance - work on responsiveness fix - write unit test with two test cases for the search-reusable component

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,9 @@
 .ant-menu-item-selected .ant-menu-title-content {
   color: white !important;
 }
+
+@media(min-width: 767px) {
+  .hamburger-menu  {
+    display: none!important;
+  }
+}
